package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "TransitionToFollowerPB";

message TransitionToFollower {
    required int32 entropy = 1;
    required string brokerLeader = 2;
    required string topic = 3;
    required string partition = 4;
    required int32 brokerPort = 5;
    optional int64 offset = 6;
}